# neorad-io2-node-interface

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  createInstaller.bat  electron-builder.env  err_msg.md  hidraw.sh  log.md  main.cpp  main.js  package-lock.json  package.json  renderer.js
cpplib/: functions.h  main.cpp  worker.h
lib/: functions.h  worker.h
lib/css/: cal.css  common.css
lib/html/: canvas.html
lib/img/: icon.icns  logo.icns
lib/js/: calibration.js  common.js  datastream.js  dio_template.js  help.js  json2dbc.js  nativeapi.js  plotly.js  temp_main.js  templates.js
vue/: index.html
